# advent-of-code

./: .env.example  .gitignore  README.md  pyproject.toml
2021/day01/: v1.py
2021/day02/: v1.py
2021/day03/: v1.py
2021/day04/: v1.py
2021/day05/: v1.py
2022/day01/: v1.py
2022/day02/: v1.py  v2.py
2022/day03/: v1.py
2022/day04/: v1.py
2022/day05/: v1.py
2022/day06/: v1.py
2022/day07/: v1.py
2022/day08/: v1.py
2022/day09/: v1.py
2022/day10/: v1.py
2022/day11/: v1.py
2022/day12/: v1.py
2022/day13/: v1.py
2022/day14/: v1.py
2022/day15/: v1.py
2022/day16/: v1.py
2022/day17/: v1.py
2022/day18/: v1.py
2022/day19/: v1.py
2022/day20/: v1.py
2022/day21/: v1.py
2022/day22/: v1.py
2022/day23/: v1.py
2022/day24/: v1.py
2022/day25/: v1.py
2023/day01/: v1.py
2023/day02/: v1.py
2023/day03/: v1.py
2023/day04/: v1.py
2023/day05/: v1.py
2023/day06/: v1.py
2023/day07/: v1.py
2023/day08/: v1.py
2023/day09/: v1.py
2023/day10/: v1.py
2023/day11/: v1.py
2023/day12/: v1.py
2023/day13/: v1.py
2023/day14/: v1.py
2023/day15/: v1.py
2023/day16/: v1.py
2023/day17/: v1.py
2023/day18/: v1.py  v2.py
2023/day19/: v1.py
2023/day20/: v1.py
2023/day21/: v1.py
2023/day22/: v1.py
2023/day23/: v1.py
2023/day24/: v1.py
2023/day25/: v1.py
2025/day01/: v1.py
2025/day02/: v1.py
2025/day03/: v1.py  v2.py
2025/day04/: v1.py
2025/day05/: v1.py
2025/day06/: v1.py
2025/day07/: v1.py
2025/day08/: v1.py  v2.py
2025/day09/: v1.py
2025/day10/: v1.py
2025/day11/: v1.py
2025/day12/: v1.py
